# Aurora

./: CMakeLists.txt  README.md  todo.txt
CMakeModules/: UtilityMacros.cmake
Code/: CMakeLists.txt
Code/Clients/: CMakeLists.txt
Code/Clients/Client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  ClientAppConfig.cpp  ClientAppConfig.h  ClientInterface.cpp  ClientInterface.h  Main.cpp  pch.h
Code/Clients/Client/Apps/: ClientApp_BaseApp.cpp  ClientApp_BaseApp.h  ClientApp_LoginApp.cpp  ClientApp_LoginApp.h
Code/Clients/Client/Entity/: ClientEntity.cpp  ClientEntity.h  ClientEntityManager.cpp  ClientEntityManager.h
Code/Clients/Client/Scripts/: Script_Aurora.cpp  Script_ClientApp.cpp  Script_ClientApp.h  Script_ClientEntity.cpp  Script_ClientEntity.h  Script_ClientEntityManager.cpp  Script_ClientEntityManager.h
Code/Common/: CMakeLists.txt
Code/Common/EntityDef/: CMakeLists.txt  EntityBase.cpp  EntityBase.h  EntityDefDataTypesx.cpp  EntityDefDataTypesx.h  EntityInfo.cpp  EntityInfo.h  EntityMethods.cpp  EntityMethods.h  EntityType.cpp  EntityType.h  EntityTypeManager.cpp  EntityTypeManager.h  pch.h
Code/Common/EntityDef/DataTypes/: AttributeOwnerBase.cpp  AttributeOwnerBase.h  DataTypeBase.cpp  DataTypeBase.h  DataTypeEntity_Meta.cpp  DataTypeEntity_Meta.h  DataTypeFixedDict.cpp  DataTypeFixedDict.h  DataTypeSequence.h  DataTypeSequence_Meta.cpp  DataTypeSequence_Meta.h  DataTypeSimple.cpp  DataTypeSimple.h  MetaDataTypeBase.cpp  MetaDataTypeBase.h  PyExTypes.h  PyTypeLongInteger.cpp  PyTypeLongInteger.h
Code/Common/common/: AppBase.cpp  AppBase.h  AppConfigBase.cpp  AppConfigBase.h  BitUtil.h  BlowfishCipher.cpp  BlowfishCipher.h  BlowfishPacketFilter.cpp  BlowfishPacketFilter.h  CMakeLists.txt  Constants.h  Debug.cpp  Debug.h  FileSystem.cpp  FileSystem.h  HashAlogrithm.cpp  HashAlogrithm.h  IAppPacketHandler.cpp  IAppPacketHandler.h  MD5.cpp  MD5.h  MainMacro.h  NetworkConn.cpp  NetworkConn.h  RSACipher.cpp  RSACipher.h  Types.h  UniqueIDPool.h  Utils.cpp  Utils.h  XMLWarpper.cpp  XMLWarpper.h  binary_stream.cpp  binary_stream.h  binary_stream.inc  concurrency.cpp  concurrency.h  memory_stream.cpp  memory_stream.h  memory_stream.inc  (+2 more)
Code/Common/common/interface/: INoneCopyable.cpp  INoneCopyable.h  IPacketFilter.h
Code/Common/common/network/: MySocketAPI.cpp  MySocketAPI.h  NetworkInit.cpp  NetworkInit.h  PacketBase.cpp  PacketBase.h  Socket.cpp  Socket.h
Code/Common/common/pyscript/: PyImportPaths.cpp  PyImportPaths.h  PyScript.cpp  PyScript.h  PyScriptAutoRegister.cpp  PyScriptAutoRegister.h
Code/Graph/: AnyType.cpp  AnyType.h  Graph.h  NodeBase.cpp  NodeBase.h  Node_Math.cpp  Node_Math.h  Node_Start.cpp  Node_Start.h  exports.h  graph.cpp  stdafx.cpp  stdafx.h
Code/Servers/: CMakeLists.txt
Code/Servers/ServerCommon/: CMakeLists.txt  ServerAppBase.cpp  ServerAppBase.h  ServerAppConfigBase.cpp  ServerAppConfigBase.h  ServerSpace.cpp  ServerSpace.h  pch.h
Code/Servers/appManager/: AppManager.cpp  AppManager.h  AppManagerConfig.cpp  AppManagerConfig.h  AppManagerInterface.cpp  AppManagerInterface.h  CMakeLists.txt  Main.cpp
Code/Servers/appManager/Apps/: AppMgr_App.cpp  AppMgr_App.h  AppMgr_BaseApp.cpp  AppMgr_BaseApp.h  AppMgr_CellApp.cpp  AppMgr_CellApp.h  AppMgr_DBManager.cpp  AppMgr_DBManager.h  AppMgr_LoginApp.cpp  AppMgr_LoginApp.h
Code/Servers/appManager/Entity/: AccountManager.cpp  AccountManager.h  GlobalEntity.cpp  GlobalEntity.h
Code/Servers/appManager/Space/: SpaceManager.cpp  SpaceManager.h  SpaceUnitInfo.cpp  SpaceUnitInfo.h
Code/Servers/baseApp/: BaseApp.cpp  BaseApp.h  BaseAppConfig.cpp  BaseAppConfig.h  BaseExternInterface.cpp  BaseExternInterface.h  BaseInternInterface.cpp  BaseInternInterface.h  CMakeLists.txt  Main.cpp  pch.h
Code/Servers/baseApp/Apps/: BaseApp_AppManager.cpp  BaseApp_AppManager.h  BaseApp_BaseApp.cpp  BaseApp_BaseApp.h  BaseApp_CellApp.cpp  BaseApp_CellApp.h  BaseApp_Client.cpp  BaseApp_Client.h  BaseApp_DBManager.cpp  BaseApp_DBManager.h
Code/Servers/baseApp/Entity/: BaseEntity.cpp  BaseEntity.h  BaseEntityManager.cpp  BaseEntityManager.h
Code/Servers/baseApp/Scripts/: Script_Aurora.cpp  Script_BaseApp.cpp  Script_BaseApp.h  Script_BaseEntity.cpp  Script_BaseEntity.h  Script_BaseEntityManager.cpp  Script_BaseEntityManager.h
Code/Servers/cellApp/: CMakeLists.txt  CellApp.cpp  CellApp.h  CellAppConfig.cpp  CellAppConfig.h  CellInterface.cpp  CellInterface.h  Main.cpp  pch.cpp  pch.h
Code/Servers/cellApp/Apps/: CellApp_AppManager.cpp  CellApp_AppManager.h  CellApp_BaseApp.cpp  CellApp_BaseApp.h
Code/Servers/cellApp/Entity/: CellEntity.cpp  CellEntity.h  CellEntityAOIManager.cpp  CellEntityAOIManager.h  CellEntityManager.cpp  CellEntityManager.h
Code/Servers/cellApp/Scripts/: Script_Aurora.cpp  Script_CellApp.cpp  Script_CellApp.h  Script_CellEntity.cpp  Script_CellEntity.h  Script_CellEntityManager.cpp  Script_CellEntityManager.h
Code/Servers/cellApp/Space/: Cell.cpp  Cell.h  CellManager.cpp  CellManager.h
Code/Servers/dbManager/: CMakeLists.txt  DBManager.h  DBManagerConfig.cpp  DBManagerConfig.h  DBManagerInterface.cpp  DBManagerInterface.h  Main.cpp  dbManager.cpp  pch.cpp  pch.h
Code/Servers/dbManager/Apps/: DBManager_AppManager.cpp  DBManager_AppManager.h  DBManager_BaseApp.cpp  DBManager_BaseApp.h
Code/Servers/loginApp/: CMakeLists.txt  LoginApp.cpp  LoginApp.h  LoginAppConfig.cpp  LoginAppConfig.h  LoginExternInterface.cpp  LoginExternInterface.h  LoginInternInterface.cpp  LoginInternInterface.h  Main.cpp  pch.cpp  pch.h
Code/Servers/loginApp/Apps/: LoginApp_AppManager.cpp  LoginApp_AppManager.h  LoginApp_Client.cpp  LoginApp_Client.h
Code/Tools/: CMakeLists.txt
Code/Tools/GenerateSql/: CMakeLists.txt  Main.cpp
Doc/: EntityDef.docx
Resource/Client/: ClientConfig.xml  login_pub.key
Resource/Scripts/: Scripts.sln
Resource/Server/: ServerConfig.xml  login.key
Resource/Spaces/: spaces.xml
Resource2/Client/: ClientConfig.xml
Resource2/Server/: ServerConfig.xml
Tools/: daemon.py  genRSAKey.bat  kill.sh  start_no_cell.sh  start_no_login.sh
(+49 files in other folders)
